add:增加micrometer测试.
Signed-off-by: Karl <karlchan.cn@gmail.com>